[tool.poetry]
name = "rab_the_bit"
version = "0.0.3"
description = "A wrapper around Kombu to use RabbitMQ, specialy on docker images"
authors = ["Vlaams Instituut voor de Zee (VLIZ), João Santos <jotaflame@gmail.com>"]
readme = "README.rst"
packages = [{include = "rab_the_bit"}]
license = "MIT"

repository = "https://github.com/vliz-be-opsci/py-rabbit"
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]


[tool.poetry.dependencies]
python = "^3.8.1"
kombu = "*"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poetry = "*"
pre-commit = "*"
isort = "*"
black = "*"
flake8 = "*"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pyyaml = "*"
pytest = "*"
coverage = "*"
python-dotenv = "*"
pytest-cov = "*"

[tool.poetry.scripts]
rab_the_bit = "rab_the_bit.__main__:main"

[build-system]
requires = ["setuptools","poetry"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
